# rmbg-tauri

./: README.md  index.html  package.json  pnpm-lock.yaml
src/: App.vue  main.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  rmbg.rs
